# mini-plataforma-analise-dados

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-SUMMARY.md  01-01-pyproject-uv-PLAN.md  01-02-SUMMARY.md  (+12 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
app/: main.py
app/api/: deps.py
app/core/: config.py  logging.py  security.py
app/db/: models.py  session.py
app/duckdb_/: connection.py  validator.py
app/ingestion/: cleaning.py  detector.py  normalize.py  reader.py  service.py
app/llm/: client.py  costs.py
app/nlq/: chart.py  classifier.py  narrator.py  service.py  sql_generator.py
app/schemas/: auth.py  errors.py  nlq.py  sessions.py  summary.py  upload.py
app/services/: auth_service.py
app/sessions/: store.py  sweeper.py
app/summary/: narrator.py  stats.py
app/tasks/: registry.py
frontend/: Dockerfile  app.py
tests/: conftest.py
tests/api/: test_auth.py  test_error_boundaries.py  test_nlq.py  test_sessions.py  test_upload.py
tests/duckdb_/: test_connection.py  test_validator.py
tests/fixtures/: ptbr_data.py
tests/ingestion/: test_detector.py  test_service.py
tests/llm/: test_client.py  test_costs.py
tests/nlq/: test_chart.py  test_multiturn.py  test_service.py
tests/perf/: test_slas.py
tests/sessions/: test_store.py
tests/summary/: test_narrator.py  test_stats.py
(+7 files in other folders)
